--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # MongoDB pour l'ingestion de données
   mongodb:
@@ -32,6 +30,7 @@ services:
       - ./data:/data
     environment:
       - CLUSTER_NAME=bigdata-cluster
+      - JAVA_HOME=/usr/local/openjdk-8
     networks:
       - bigdata-network
 
@@ -48,6 +47,7 @@ services:
       - ./data:/data
     environment:
       - SERVICE_TYPE=secondary
+      - JAVA_HOME=/usr/local/openjdk-8
     depends_on:
       - hadoop-master
     networks:
@@ -64,6 +64,7 @@ services:
       - ./data:/data
     environment:
       - SERVICE_TYPE=worker
+      - JAVA_HOME=/usr/local/openjdk-8
     depends_on:
       - hadoop-master
     networks:
@@ -80,6 +81,7 @@ services:
       - ./data:/data
     environment:
       - SERVICE_TYPE=worker
+      - JAVA_HOME=/usr/local/openjdk-8
     depends_on:
       - hadoop-master
     networks:
@@ -96,6 +98,7 @@ services:
       - ./data:/data
     environment:
       - SERVICE_TYPE=worker
+      - JAVA_HOME=/usr/local/openjdk-8
     depends_on:
       - hadoop-master
     networks:
